# MineCXX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  asset_extractor.py
Engine/: CMakeLists.txt
Engine/Vulkan/: CMakeLists.txt
Engine/Vulkan/include/engine/vulkan/: vulkan_context.hpp  vulkan_queue.hpp  vulkan_resource.hpp
Engine/Vulkan/include/engine/vulkan/device/: vulkan_device.hpp  vulkan_queue.hpp
Engine/Vulkan/include/engine/vulkan/render/: vulkan_descriptor.hpp  vulkan_pipeline.hpp
Engine/Vulkan/include/engine/vulkan/render/buffer/: vulkan_image.hpp  vulkan_index_buffer.hpp  vulkan_storage_buffer.hpp  vulkan_transfer_pool.hpp  vulkan_uniform_buffer.hpp  vulkan_vertex_buffer.hpp
Engine/Vulkan/include/engine/vulkan/render/command/: vulkan_command_buffer.hpp  vulkan_command_pool.hpp
Engine/Vulkan/include/engine/vulkan/render/swapchain/: vulkan_image.hpp  vulkan_swapchain.hpp
Engine/Vulkan/src/: vulkan_context.cpp  vulkan_resource.cpp
Engine/Vulkan/src/device/: vulkan_device.cpp  vulkan_queue.cpp
Engine/Vulkan/src/render/: vulkan_descriptor.cpp  vulkan_pipeline.cpp  vulkan_program.cpp  vulkan_resource.cpp
Engine/Vulkan/src/render/buffer/: vulkan_image.cpp  vulkan_index_buffer.cpp  vulkan_storage_buffer.cpp  vulkan_transfer_pool.cpp  vulkan_uniform_buffer.cpp  vulkan_vertex_buffer.cpp
Engine/Vulkan/src/render/command/: vulkan_command_buffer.cpp  vulkan_command_pool.cpp
Engine/Vulkan/src/render/swapchain/: vulkan_image.cpp  vulkan_swapchain.cpp
Engine/Vulkan/tests/: program_test.cpp
Engine/include/engine/: engine.hpp  file.hpp  log.hpp  math.hpp  window.hpp  world_object.hpp
Engine/include/engine/event/: event.cpp  event.hpp
Engine/include/engine/gui/: gui.hpp  input.hpp  scene.hpp
Engine/include/engine/gui/element/: element.hpp
Engine/include/engine/gui/font/: ascii_font.hpp  font_renderer.hpp
Engine/include/engine/image/: packer.hpp
Engine/include/engine/nbt/: nbt_parser.hpp  nbt_type.hpp  nbt_writer.hpp
Engine/include/engine/render/: camera.hpp  descriptor.hpp  pipeline.hpp  render_context.hpp  swapchain.hpp  viewport.hpp
Engine/include/engine/render/buffer/: image.hpp  index_buffer.hpp  storage_buffer.hpp  uniform_buffer.hpp  vertex_buffer.hpp
Engine/include/engine/render/command/: command_buffer.hpp  command_pool.hpp
Engine/src/: engine.cpp  file.cpp  log.cpp  log_internal.hpp  pipeline.cpp  window.cpp
Engine/src/gui/: element.cpp  gui.cpp  scene.cpp
Engine/src/gui/font/: ascii_font.cpp  font_renderer.cpp
Engine/src/image/: packer.cpp
Engine/src/nbt/: nbt_type.cpp
Engine/src/render/: camera.cpp  viewport.cpp
Game/: CMakeLists.txt
Game/assets/shaders/basic/: config.json  shader.frag  shader.frag.spv  shader.spv  shader.vert
Game/assets/shaders/font/: config.json  shader.frag  shader.geom  shader.vert  shader.vert.old
Game/assets/shaders/font/cached/: shader.frag  shader.geom
Game/assets/shaders/font/dynamic/: config.json  shader.frag  shader.geom  shader.vert
Game/assets/shaders/gui/button/: config.json  shader.frag  shader.vert
Game/assets/shaders/gui/image/: config.json  shader.frag  shader.vert
Game/assets/shaders/world/standard/: config.json  shader.frag  shader.vert
Game/src/: main.cpp
Game/src/gui/: main_menu.cpp  main_menu.hpp
Game/src/world/: block.cpp  block.hpp  chunk.cpp  chunk.hpp  world.cpp  world.hpp
ProgramC/: CMakeLists.txt  main.cpp
